--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="https://github.com/FesoQue">Feso Que</a>.
+        >. Coded by <a href="https://github.com/devshwta">devshweta</a>.
       </div>
     </footer>
 
